<resources>
    <string name="app_name">JunedShaikh_Project</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="product_name">Product Name</string>
    <string name="product_description">Product Description</string>
    <string name="product_price">Product Price</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="buy_now">Buy Now</string>
    <string name="email">Email</string>
    <string name="shopsmart">ShopSmart</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="profile_details">Profile Details</string>
    <string name="logout">Logout</string>
    <string name="my_cart">My Cart</string>
    <string name="product_details">Product Details</string>
    <string name="checkout_page">Checkout Page</string>
    <string name="order_confirmation_message">Your order has been placed.</string>
    <string name="address_label">Address<font color="#FF0000">*</font></string>
    <string name="address_hint">Address</string>
    <string name="landmark_label">Landmark<font color="#FF0000">*</font></string>
    <string name="landmark_hint">Landmark</string>
    <string name="city_label">City</string>
    <string name="city_hint">City</string>
    <string name="state_label">State<font color="#FF0000">*</font></string>
    <string name="state_hint">State</string>
    <string name="pin_code_label">Pin Code</string>
    <string name="pin_code_hint">Pin code</string>
    <string name="submit">Submit</string>
    <string name="proceed_to_checkout">Proceed to checkout</string>
    <string name="name_labe">Name<font color="#FF0000">*</font></string>
    <string name="total_amount">Total Amount: $0.00</string>
    <string name="total_price">Total Price: %d</string>
    <string name="payment">Payment Methode<font color="#FF0000">*</font></string>



    <string-array name="quantity_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>

    </string-array>
</resources>